src/test/deca/context/invalid/provided/stringdeclmeth.deca
class A{
    int x;
    void calcul(int r, float t){
        string t;
    }
}